# promptier

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  example.env
resources/icon/: books.avif
src/: config.rs  main.rs
src/controllers/: mod.rs  prompt_controllers.rs
src/dependencies/: db.rs  log.rs  mod.rs
src/domain/: mod.rs
src/domain/dto/: error_dto.rs  mod.rs  prompt_dto.rs
src/domain/entities/: mod.rs  prompt_entities.rs
src/middlewares/: log.rs  mod.rs
src/routes/: mod.rs  prompt_routes.rs  utils.rs
