[package]
name = "promptier"
version = "1.0.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
envconfig = "0.11.0"
mongodb = "3.1.0"
poem = "3.1.3"
poem-openapi = { version = "5", features = ["swagger-ui"] }
serde = "1.0.215"
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "registry",
    "env-filter",
    "local-time",
] }
